--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import os, sys\n",
+    "sys.path.append(\"textSummarizer\")\n"
    ]
   },
   {
@@ -59,8 +60,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from textSummarizerNLP.constants import *\n",
-    "from textSummarizerNLP.utils.common import read_yaml, create_directories"
+    "# from src.textSummarizer.constants import CONFIG_FILE_PATH\n",
+    "from textSummarizer.constants import *\n",
+    "from textSummarizer.utils.common import read_yaml, create_directories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # from pathlib import Path\n",
+    "\n",
+    "# CONFIG_FILE_PATH = \"config/config.yaml\"\n",
+    "# print(CONFIG_FILE_PATH)\n",
+    "# PARAMS_FILE_PATH = \"params.yaml\""
    ]
   },
   {
@@ -106,8 +121,8 @@
     "import os\n",
     "import urllib.request as request\n",
     "import zipfile\n",
-    "from textSummarizerNLP.logging import logger\n",
-    "from textSummarizerNLP.utils.common import get_size"
+    "from textSummarizer.logging import logger\n",
+    "from textSummarizer.utils.common import get_size"
    ]
   },
   {
